--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,12 +27,21 @@ $output-code-width: 40%;
 
 body {
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: $font-size-primary;
 }
 
 html {
     font-size: 62.5%;
+}
+
+//for testing onley
+.testing {
+    position: absolute;
+    z-index: 1000;
+    background-color: rgba(151, 139, 255, 0.178);
+    top: 0;
+    left: calc(100vw / 2);
 }
 
 //styles
@@ -149,7 +158,7 @@ html {
         margin-right: 1rem;
         box-shadow: $bump-outer-high;
 
-        font-family: 'Nanum Myeongjo', serif;
+        font-family: "Nanum Myeongjo", serif;
         font-size: 2rem;
         font-weight: 400;
         color: $color-neon;
@@ -157,7 +166,7 @@ html {
             -0.2rem -0.2rem 0.2rem darken($color-neon, 50%);
 
         &::after {
-            content: '>>';
+            content: ">>";
             position: absolute;
             left: 0.4rem;
             color: darken($color-neon, 20%);
@@ -196,7 +205,7 @@ html {
         right: 4rem;
         transition: all 0.2s;
         &:after {
-            content: 'view';
+            content: "view";
             color: darken($color-neon, 20%);
             filter: blur(0.8rem);
             position: absolute;
@@ -220,7 +229,7 @@ html {
 /////////canvas
 #canvas1 {
     position: absolute;
-    background-color: grey;
+    // background-color: grey;
     height: 100%;
     width: 100%;
     top: 0;
