--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,10 +8,8 @@ $bump-inner-low: inset 1.5rem 1.5rem 2rem darken($color-primary, 10%),
     inset -1.5rem -1.5rem 2rem lighten($color-primary, 10%);
 $bump-inner-high: inset 1.5rem 1.5rem 2rem lighten($color-primary, 10%),
     inset -1.5rem -1.5rem 2rem darken($color-primary, 10%);
-$bump-outer-low: 0.5rem 0.5rem 1rem darken($color-primary, 10%),
-    -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
-$bump-outer-high: 0.5rem 0.5rem 1rem darken($color-primary, 10%),
-    -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
+$bump-outer-low: 0.5rem 0.5rem 1rem darken($color-primary, 10%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
+$bump-outer-high: 0.5rem 0.5rem 1rem darken($color-primary, 10%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
 
 //variables - functional
 $output-code-width: 40%;
@@ -27,7 +25,7 @@ $output-code-width: 40%;
 
 body {
     box-sizing: border-box;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: $font-size-primary;
 }
 
@@ -110,8 +108,7 @@ html {
 
         &--animation {
             // background-color:red;
-            box-shadow: inset 0 0 0 darken($color-primary, 10%),
-                inset 0 0 0 lighten($color-primary, 10%);
+            box-shadow: inset 0 0 0 darken($color-primary, 10%), inset 0 0 0 lighten($color-primary, 10%);
         }
     }
 
@@ -130,8 +127,7 @@ html {
         margin: 1rem;
         border-radius: 2rem;
 
-        box-shadow: inset 0 0 0 darken($color-primary, 10%),
-            inset 0 0 0 lighten($color-primary, 10%);
+        box-shadow: inset 0 0 0 darken($color-primary, 10%), inset 0 0 0 lighten($color-primary, 10%);
         // opacity:0;
         // visibility:hidden;
         color: transparent;
@@ -158,15 +154,14 @@ html {
         margin-right: 1rem;
         box-shadow: $bump-outer-high;
 
-        font-family: "Nanum Myeongjo", serif;
+        font-family: 'Nanum Myeongjo', serif;
         font-size: 2rem;
         font-weight: 400;
         color: $color-neon;
-        text-shadow: 0.2rem 0.2rem 0.2rem lighten($color-neon, 50%),
-            -0.2rem -0.2rem 0.2rem darken($color-neon, 50%);
+        text-shadow: 0.2rem 0.2rem 0.2rem lighten($color-neon, 50%), -0.2rem -0.2rem 0.2rem darken($color-neon, 50%);
 
         &::after {
-            content: ">>";
+            content: '>>';
             position: absolute;
             left: 0.4rem;
             color: darken($color-neon, 20%);
@@ -205,7 +200,7 @@ html {
         right: 4rem;
         transition: all 0.2s;
         &:after {
-            content: "view";
+            content: 'view';
             color: darken($color-neon, 20%);
             filter: blur(0.8rem);
             position: absolute;
@@ -214,12 +209,10 @@ html {
         }
         &:hover {
             // background-color:darken($color-primary, 5%);
-            box-shadow: 1rem 1rem 2rem darken($color-primary, 10%),
-                -1rem -1rem 2rem lighten($color-primary, 10%);
+            box-shadow: 1rem 1rem 2rem darken($color-primary, 10%), -1rem -1rem 2rem lighten($color-primary, 10%);
         }
         &:active {
-            box-shadow: 1rem 1rem 2rem darken($color-primary, 10%),
-                -1rem -1rem 2rem lighten($color-primary, 10%),
+            box-shadow: 1rem 1rem 2rem darken($color-primary, 10%), -1rem -1rem 2rem lighten($color-primary, 10%),
                 inset 0.5rem 0.5rem 1rem darken($color-primary, 10%),
                 inset -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
         }
@@ -229,7 +222,7 @@ html {
 /////////canvas
 #canvas1 {
     position: absolute;
-    // background-color: grey;
+    background-color: grey;
     height: 100%;
     width: 100%;
     top: 0;
