save before refactor all code

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -222,7 +222,7 @@ html {
 /////////canvas
 #canvas1 {
     position: absolute;
-    background-color: grey;
+    // background-color: yellowgreen;
     height: 100%;
     width: 100%;
     top: 0;
