--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,7 +25,7 @@ $output-code-width: 40%;
 
 body {
     box-sizing: border-box;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: $font-size-primary;
 }
 
@@ -154,14 +154,14 @@ html {
         margin-right: 1rem;
         box-shadow: $bump-outer-high;
 
-        font-family: "Nanum Myeongjo", serif;
+        font-family: 'Nanum Myeongjo', serif;
         font-size: 2rem;
         font-weight: 400;
         color: $color-neon;
         text-shadow: 0.2rem 0.2rem 0.2rem lighten($color-neon, 50%), -0.2rem -0.2rem 0.2rem darken($color-neon, 50%);
 
         &::after {
-            content: ">>";
+            content: '>>';
             position: absolute;
             left: 0.4rem;
             color: darken($color-neon, 20%);
@@ -200,7 +200,7 @@ html {
         right: 4rem;
         transition: all 0.2s;
         &:after {
-            content: "view";
+            content: 'view';
             color: darken($color-neon, 20%);
             filter: blur(0.8rem);
             position: absolute;
@@ -228,6 +228,7 @@ html {
     height: 100%;
     width: 100%;
     z-index: 100;
+    // z-index: -1;
 }
 
 /////////animations
