--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -182,6 +182,10 @@ html {
         width: 100%;
         height: 100%;
     }
+    &__main {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .btn {
@@ -231,4 +235,16 @@ html {
     // z-index: -1;
 }
 
-/////////animations
+.my-element {
+    background-color: orangered;
+
+    display: flex;
+    justify-content: space-around;
+
+    padding: 2rem;
+    text-transform: uppercase;
+    color: blue;
+    &__text {
+        display: inline-block;
+    }
+}
