element centered, shapeview class export fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -245,4 +245,6 @@ html {
     /* width | style | color */
     border: 0.5rem dashed black;
     border-radius: 1rem;
+    transform: translate(-50%, -50%);
+    margin-left: 10rem;
 }
