--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,6 @@
+//imports
+@import 'mixins.scss';
+
 //variables
 $font-size-primary: 2rem;
 
@@ -50,20 +53,17 @@ html {
         width: 100vw;
         height: 100vh;
         padding: 2rem;
-    }
-    &__code-desk {
-        background-color: transparent;
-        // background-color:green;
-        width: 100%;
-        height: 100%;
-        height: calc(100% - 6rem);
-
-        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 1rem;
     }
 }
 
 .top-bar {
     &__container {
+        flex-grow: 0;
+
         background-color: $color-primary;
         // background-color:red;
         z-index: 20;
@@ -174,13 +174,15 @@ html {
 
 .desk {
     &__container {
+        flex-grow: 3;
+
         background-color: $color-primary;
         // background-color:orangered;//for tests
         border-radius: 3rem;
         box-shadow: $bump-inner-low;
 
         width: 100%;
-        height: 100%;
+        height: 50%;
     }
     &__main {
         width: 100%;
@@ -228,11 +230,48 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    // background-color: yellowgreen;
+    background-color: yellowgreen;
     height: 100%;
     width: 100%;
     z-index: 100;
     // z-index: -1;
+}
+
+.style-bar {
+    &__container {
+        flex-grow: 0;
+
+        // background-color: orangered;
+        padding: 1rem;
+        height: 25%;
+
+        border-radius: 3rem;
+        box-shadow: $bump-inner-low;
+    }
+    &__list {
+        // background-color: green;
+        list-style: none;
+        height: 100%;
+
+        display: flex;
+        justify-content: space-between;
+        overflow-x: scroll;
+        gap: 1rem;
+
+        @include scroll-bar-style;
+    }
+    &__style-item {
+        // background-color: blue;
+        font-size: 1.5rem;
+        padding: 1rem;
+        flex-shrink: 0;
+
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+
+        @include scroll-bar-style;
+    }
 }
 
 .my-element {
