--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 //imports
-@import 'mixins.scss';
+@import "mixins.scss";
 
 //variables
 $font-size-primary: 2rem;
@@ -28,7 +28,7 @@ $output-code-width: 40%;
 
 body {
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: $font-size-primary;
 }
 
@@ -154,14 +154,14 @@ html {
         margin-right: 1rem;
         box-shadow: $bump-outer-high;
 
-        font-family: 'Nanum Myeongjo', serif;
+        font-family: "Nanum Myeongjo", serif;
         font-size: 2rem;
         font-weight: 400;
         color: $color-neon;
         text-shadow: 0.2rem 0.2rem 0.2rem lighten($color-neon, 50%), -0.2rem -0.2rem 0.2rem darken($color-neon, 50%);
 
         &::after {
-            content: '>>';
+            content: ">>";
             position: absolute;
             left: 0.4rem;
             color: darken($color-neon, 20%);
@@ -185,6 +185,10 @@ html {
         height: 50%;
     }
     &__main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         width: 100%;
         height: 100%;
     }
@@ -206,7 +210,7 @@ html {
         right: 4rem;
         transition: all 0.2s;
         &:after {
-            content: 'view';
+            content: "view";
             color: darken($color-neon, 20%);
             filter: blur(0.8rem);
             position: absolute;
@@ -261,7 +265,7 @@ html {
         @include scroll-bar-style;
     }
     &__style-item {
-        // background-color: blue;
+        // background-color: #0000ff;
         font-size: 1.5rem;
         padding: 1rem;
         flex-shrink: 0;
@@ -272,23 +276,39 @@ html {
 
         @include scroll-bar-style;
 
-        & input[type='color'] {
+        & input[type="color"] {
             flex-shrink: 0;
             height: 3rem;
+        }
+
+        & span {
+            margin-top: 1rem;
         }
     }
 }
 
+.input-element-text {
+    position: absolute;
+    left: 50rem;
+    top: 50rem;
+}
 .my-element {
-    display: inline-block;
-    background-color: orangered;
-    padding: 2rem;
-    text-transform: uppercase;
-    color: blue;
+    // display: inline-block;
+    // transform: translate(-50%, -50%);
+    // margin-left: 10rem;
 
-    /* width | style | color */
-    border: 0.5rem dashed black;
-    border-radius: 1rem;
-    transform: translate(-50%, -50%);
-    margin-left: 10rem;
+    // padding: 2rem;
+
+    // font-size: 2rem;
+    // color: #000000;
+    // text-align: center;
+    // text-transform: uppercase;
+
+    // background-color: orangered;
+
+    // border-radius: 1rem;
+
+    // border: 0.5rem dashed black;
+
+    // box-shadow: 0.5rem 0.5rem 1rem rgba($color: #000000, $alpha: 0.5);
 }
