--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -287,28 +287,32 @@ html {
     }
 }
 
-.input-element-text {
+#input-text {
     position: absolute;
-    left: 50rem;
-    top: 50rem;
+    left: -50rem;
+    top: -50rem;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: transparent;
 }
-.my-element {
-    // display: inline-block;
-    // transform: translate(-50%, -50%);
-    // margin-left: 10rem;
+// .my-element {
+//     display: inline-block;
+//     transform: translate(-50%, -50%);
+//     margin-left: 10rem;
 
-    // padding: 2rem;
+//     padding: 2rem;
 
-    // font-size: 2rem;
-    // color: #000000;
-    // text-align: center;
-    // text-transform: uppercase;
+//     font-size: 2rem;
+//     color: #000000;
+//     text-align: center;
+//     text-transform: uppercase;
 
-    // background-color: orangered;
+//     background-color: orangered;
 
-    // border-radius: 1rem;
+//     border-radius: 1rem;
 
-    // border: 0.5rem dashed black;
+//     border: 0.5rem dashed black;
 
-    // box-shadow: 0.5rem 0.5rem 1rem rgba($color: #000000, $alpha: 0.5);
-}
+//     box-shadow: 0.5rem 0.5rem 1rem rgba($color: #000000, $alpha: 0.5);
+// }
