--- a/src/sass/mainDark.scss
+++ b/src/sass/mainDark.scss
@@ -2,17 +2,20 @@
 @import "mixins.scss";
 
 //variables
+$font-color-primary: #fff7ff;
+$font-color-neon: #ade4ff;
 $font-size-primary: 2rem;
+$font-shadow: 0 0 0.5rem #ade4ff;
 
 $color-primary: #202124;
-$color-neon: #ade4ff;
+$color-neon: #c46594;
 
-$bump-inner-low: inset 1.5rem 1.5rem 2rem darken($color-primary, 10%),
-    inset -1.5rem -1.5rem 2rem lighten($color-primary, 10%);
-$bump-inner-high: inset 1.5rem 1.5rem 2rem lighten($color-primary, 10%),
-    inset -1.5rem -1.5rem 2rem darken($color-primary, 10%);
-$bump-outer-low: 0.5rem 0.5rem 1rem darken($color-primary, 10%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
-$bump-outer-high: 0.5rem 0.5rem 1rem darken($color-primary, 10%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
+$bump-inner-low: inset 1.5rem 1.5rem 2rem darken($color-primary, 5%),
+    inset -1.5rem -1.5rem 2rem lighten($color-primary, 20%);
+$bump-inner-high: inset 1.5rem 1.5rem 2rem lighten($color-primary, 20%),
+    inset -1.5rem -1.5rem 2rem darken($color-primary, 5%);
+$bump-outer-low: 0.5rem 0.5rem 1rem darken($color-primary, 5%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
+$bump-outer-high: 0.5rem 0.5rem 1rem darken($color-primary, 5%), -0.5rem -0.5rem 1rem lighten($color-primary, 10%);
 
 //variables - functional
 $output-code-width: 40%;
@@ -30,6 +33,15 @@ body {
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
     font-size: $font-size-primary;
+    font-weight: 300;
+    color: $font-color-primary;
+    // prettier-ignore
+    text-shadow: 
+    0 0 0.5rem $color-neon, 
+    0 0 .8rem $color-neon, 
+    0 0 1.1rem $color-neon, 
+    0 0 1.5rem $color-neon, 
+    0 0 2rem $color-neon;
 }
 
 html {
@@ -81,6 +93,7 @@ html {
 
     &__menu-item {
         background-color: $color-primary;
+        color: in;
         padding: 1rem;
         margin-left: 2rem;
         border-radius: 1rem;
@@ -179,6 +192,7 @@ html {
         background-color: $color-primary;
         // background-color:orangered;//for tests
         border-radius: 3rem;
+        border: 2px solid $color-neon;
         box-shadow: $bump-inner-low;
 
         width: 100%;
@@ -250,6 +264,7 @@ html {
         height: 25%;
 
         border-radius: 3rem;
+        border: 2px solid $color-neon;
         box-shadow: $bump-inner-low;
     }
     &__list {
@@ -265,7 +280,6 @@ html {
         @include scroll-bar-style;
     }
     &__style-item {
-        // background-color: #0000ff;
         font-size: 1.5rem;
         padding: 1rem;
         flex-shrink: 0;
@@ -273,17 +287,76 @@ html {
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
+        justify-content: start;
+        align-items: center;
+        gap: 1.5rem;
 
         @include scroll-bar-style;
 
         & input[type="color"] {
             flex-shrink: 0;
             height: 3rem;
+            width: 3rem;
+            border: 1px solid $color-neon;
+            border-radius: 50%;
+            -webkit-appearance: none;
+        }
+        & input[type="color"]::-webkit-color-swatch-wrapper {
+            padding: 0;
+        }
+        & input[type="color"]::-webkit-color-swatch {
+            border: none;
+            border-radius: 50%;
         }
 
-        & span {
-            margin-top: 1rem;
+        & input[type="number"] {
+            background-color: lighten($color-primary, 20%);
+            border: 1px solid $color-neon;
+            border-radius: 50rem;
+            width: 5rem;
+            color: #fff;
+            text-align: center;
+            outline: none;
         }
+
+        & input[type="range"] {
+            height: 0rem;
+            -webkit-appearance: none;
+            width: 100%;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+        & input[type="range"]::-webkit-slider-thumb {
+            // prettier-ignore
+            box-shadow: 
+            0 0 0.5rem $color-neon, 
+            0 0 1rem $color-neon, 
+            0 0 1.5rem $color-neon, 
+            0 0 2rem $color-neon, 
+            0 0 2.5rem $color-neon;
+            border: 2px solid lighten($color-neon, 50%);
+            height: 1.5rem;
+            width: 1.5rem;
+            background: $color-neon;
+            border-radius: 50%;
+            -webkit-appearance: none;
+        }
+        & input[type="range"]::-webkit-slider-runnable-track {
+            cursor: pointer;
+            // prettier-ignore
+            box-shadow: 
+            inset .2rem .2rem .5rem darken($color-primary, 5%),
+            inset -.2rem -.2rem .5rem lighten($color-primary, 20%);
+            background: $color-primary;
+            border-radius: 50px;
+            border: 1px solid $color-neon;
+        }
+
+        // & span,
+        // h3 {
+        //     // margin-top: 1rem;
+        //     // margin: 1rem;
+        // }
     }
 }
 
@@ -298,26 +371,27 @@ html {
     // border: none;
     // color: transparent;
 }
-// .my-element {
-//     display: inline-block;
-//     transform: translate(-50%, -50%);
-//     margin-left: 10rem;
+.my-element {
+    text-shadow: none;
+    // display: inline-block;
+    // transform: translate(-50%, -50%);
+    // margin-left: 10rem;
 
-//     padding: 2rem;
+    // padding: 2rem;
 
-//     font-size: 2rem;
-//     color: #000000;
-//     text-align: center;
-//     text-transform: uppercase;
+    // font-size: 2rem;
+    // color: #000000;
+    // text-align: center;
+    // text-transform: uppercase;
 
-//     background-color: orangered;
+    // background-color: orangered;
 
-//     border-radius: 1rem;
+    // border-radius: 1rem;
 
-//     border: 0.5rem dashed black;
+    // border: 0.5rem dashed black;
 
-//     box-shadow: 0.5rem 0.5rem 1rem rgba($color: #000000, $alpha: 0.5);
-// }
+    // box-shadow: 0.5rem 0.5rem 1rem rgba($color: #000000, $alpha: 0.5);
+}
 
 .hidden {
     visibility: hidden;
